--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
 }
 
 a {
-    color: rgb(3, 67, 101);
+    color: #f5f5f5;
     text-decoration: none;
     font-weight: bold;
 }
@@ -46,7 +46,8 @@ a:hover {
 
 nav {
     width: 70%;
-    margin: 0 auto;
+    margin: 50px auto;
+
     
 }
 
@@ -121,11 +122,22 @@ h3 {
 }
 
 .box-nav{
-     background-color: #f5f5f5;
+     background-color: rgb(3, 67, 101);
      position: relative;
      border-radius: 25px;
      box-shadow: 5px 5px 10px rgb(82, 79, 79);
 }
+
+.icon {
+    font-size: 200%;
+    color: #f5f5f5;
+    width: 85%;
+    text-align: right;
+    padding: 20px;
+
+}
+
+
 
 /*
 .box-nav::after {
